--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-GRAPHQL_ENDPOINT="https://shorturl.at/dkKY1/graphql/"
+GRAPHQL_ENDPOINT="http://sissypeepo.liveblog365.com/2023/05/08/siissy-pepeo/graphql/"
